--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <script type="text/javascript" src="/js/jquery.twentytwenty.js"></script>
 <script type="text/javascript" src="/js/bs-stepper.min.js"></script>
 
-<title>luhui Photo editor online - http://pixlr.luhui.net</title>
+<title>stoutscientist Photo editor online - http://pixlr.stoutscientist.com</title>
 <meta name="description" content="Discover free and premium online photo editor! Effects, filters, overlays, simple to expert tools. You'll find a Pixlr image editor just for you!">
-<meta property="og:site_name" content="Photo editor online - pixlr.luhui.net"/>
-<meta property="og:title" content="Photo editor online - pixlr.luhui.net" />
+<meta property="og:site_name" content="Photo editor online - pixlr.stoutscientist.com"/>
+<meta property="og:title" content="Photo editor online - pixlr.stoutscientist.com" />
 <meta property="og:description" content="Discover free and premium online photo editor! Effects, filters, overlays, simple to expert tools. You'll find a Pixlr image editor just for you!" />
 <meta property="og:image" content="/images/best-photo-editor-cover.jpg" />
 <meta property="og:type" content="website" />
@@ -75,13 +75,13 @@
                     
                 </ul>
                 <div class="social-icon">
-                    <a href="https://www.facebook.com/luhuiceo" title="pixlr facebook" rel="nofollow noopener"
+                    <a href="https://www.facebook.com/stoutscientistceo" title="pixlr facebook" rel="nofollow noopener"
                         aria-label="pixlr facebook" target="_blank">
                         <img src="/images/FB_white@2x.png" class="image-data" alt="pixlr facebook" /></a>
-                    <a href="http://www.instagram.com/luhuiceo" title="pixlr instagram" rel="nofollow noopener"
+                    <a href="http://www.instagram.com/stoutscientistceo" title="pixlr instagram" rel="nofollow noopener"
                         aria-label="pixlr instagram" target="_blank">
                         <img src="/images/IG_white@2x.png" class="image-data" alt="pixlr instagram" /></a>
-                    <a href="https://www.twitter.com/luhuiceo/" title="pixlr twitter" rel="nofollow noopener"
+                    <a href="https://www.twitter.com/stoutscientistceo/" title="pixlr twitter" rel="nofollow noopener"
                         aria-label="pixlr twitter" target="_blank"><img src="/images/TWITTER_white@2x.png"
                             class="image-data" alt="pixlr twitter" /></a>
                 </div>
@@ -151,7 +151,7 @@
                 <div class="next-generation">
                     <h1>NEXT GENERATION PHOTO EDITING</h1>
                     <p>Experience next level, intuitive photo editing with AI-powered tools for quick yet professional edits. Designed to be easy, you can now edit images smarter and faster for Free - with Pixlr. No steep learning curve, no design experience needed.  </p>
-                    <span><a class="hero-button" href="/x/" style="font-family: Nexa;" title="photo editor pixlr x" aria-label="photo editor pixlr x">start editing</a></span>
+                    <span><a class="hero-button" href="/e/" style="font-family: Nexa;" title="photo editor pixlr x" aria-label="photo editor pixlr x">start editing</a></span>
                 </div>
             </div>
             <div class="col-md-6 col-12 col-sm-12" style="padding: 0px;">
@@ -657,10 +657,10 @@
       </ul>
       <ul class="links-column">
         <li class="column-head">Follow Us</li>
-        <li><a href="http://www.luhui.net/" target="_blank" rel="noopener">Blog</a></li>
-        <li><a href="https://twitter.com/luhuiceo" target="_blank" rel="noopener">Twitter</a></li>
-        <li><a href="https://www.facebook.com/luhuiceo" target="_blank" rel="noopener">Facebook</a></li>
-        <li class="column-last-child"><a href="https://www.instagram.com/luhuiceo/" target="_blank" rel="noopener">Instagram</a></li class="column-last-child">
+        <li><a href="http://www.stoutscientist.com/" target="_blank" rel="noopener">Blog</a></li>
+        <li><a href="https://twitter.com/stoutscientistceo" target="_blank" rel="noopener">Twitter</a></li>
+        <li><a href="https://www.facebook.com/stoutscientistceo" target="_blank" rel="noopener">Facebook</a></li>
+        <li class="column-last-child"><a href="https://www.instagram.com/stoutscientistceo/" target="_blank" rel="noopener">Instagram</a></li class="column-last-child">
       </ul>
     </div>
     </div>
@@ -735,7 +735,7 @@
 
 <div class="copyright pr" style="text-align: center; margin-left: 0px;">
 	<p>
-		Copyright&nbsp;2004-01-11&nbsp;luhui.net&nbsp;all rights reserved
+		Copyright&nbsp;2004-01-11&nbsp;stoutscientist.com&nbsp;all rights reserved
 	</p>
 </div>
 
