--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 
 <div class="copyright pr" style="text-align: center; margin-left: 0px;">
 	<p>
-		Copyright&nbsp;2004-01-11&nbsp;stoutscientist.com&nbsp;all rights reserved
+		Copyright&nbsp;2004-01-11&nbsp;pixlr.com&nbsp;all rights reserved
 	</p>
 </div>
 
